modules/networking/vpc/nat_gw.tf
//resource "aws_nat_gateway" "gw" {
//  allocation_id = aws_eip.nat.id
//  subnet_id     = aws_subnet.data_one.id
//
//  tags = {
//    Name = "gw NAT data_one"
//  }
//}
